--- a/index.htm
+++ b/index.htm
@@ -99,7 +99,7 @@
 	</style>
 </head>
 <body style="background-image: url('img/bgdepa.webp'); background-size: 100% 100%;">
-	
+	<a aria-label="Reserva aquí" href="https://wa.me/+51945823726" />
 	<div class="container">
 		<div id="slogo" style="border-bottom:1rem;">
 			<div class="img_of">
