--- a/index.htm
+++ b/index.htm
@@ -258,7 +258,7 @@
 			</div>
 		</div>
 
-	<a href="https://wa.me/+51914968553?text=Buen%día,%me%20gustaria%20alquilar%20un%departamento"" style="background-color: #dcf8c6;border-radius: 10px; border:2px solid #25d366;padding:3px 3px 3px 3px;margin:1rem;position: fixed;display:flex;justify-content: center; bottom: 0px;right: 0px;text-decoration: none; color: #25d366;font-size: 20px;"><img alt="Chat on WhatsApp" src="img/wppicon.png" height="20px" style="margin-right: 5px;" />RESERVA YA
+	<a href="https://wa.me/+51914968553?text=Buen%20día,%20me%20gustaría%20alquilar%20un%departamento"" style="background-color: #dcf8c6;border-radius: 10px; border:2px solid #25d366;padding:3px 3px 3px 3px;margin:1rem;position: fixed;display:flex;justify-content: center; bottom: 0px;right: 0px;text-decoration: none; color: #25d366;font-size: 20px;"><img alt="Chat on WhatsApp" src="img/wppicon.png" height="20px" style="margin-right: 5px;" />RESERVA YA
 	<a />
 
 
