--- a/index.htm
+++ b/index.htm
@@ -80,6 +80,9 @@
 		  #galeria *	{
 		  	height: 0;
 		  }
+		  .item img{
+		  	height: 60vh !important;
+		  }
 		}
 
 		.mapouter{
@@ -118,7 +121,7 @@
 			position: relative;
     		text-align: center;
 		}
-		
+
 		.img_of h1{
 			color: #F5F5F5;
 			position: absolute;
@@ -258,7 +261,7 @@
 			</div>
 		</div>
 
-	<a href="https://wa.me/+51914968553?text=Buen%20día,%20me%20gustaría%20alquilar%20un%departamento"" style="background-color: #dcf8c6;border-radius: 10px; border:2px solid #25d366;padding:3px 3px 3px 3px;margin:1rem;position: fixed;display:flex;justify-content: center; bottom: 0px;right: 0px;text-decoration: none; color: #25d366;font-size: 20px;"><img alt="Chat on WhatsApp" src="img/wppicon.png" height="20px" style="margin-right: 5px;" />RESERVA YA
+	<a href="https://wa.me/+51945823726?text=Buen%20día,%20me%20gustaría%20alquilar%20un%20departamento" style="background-color: #dcf8c6;border-radius: 10px; border:2px solid #25d366;padding:3px 3px 3px 3px;margin:1rem;position: fixed;display:flex;justify-content: center; bottom: 0px;right: 0px;text-decoration: none; color: #25d366;font-size: 20px;"><img alt="Chat on WhatsApp" src="img/wppicon.png" height="20px" style="margin-right: 5px;" />RESERVA YA
 	<a />
 
 
